# k-base

./: .firebaserc  .gitignore  CHANGELOG.md  CLAUDE.md  IDEAS.md  QUICKSTART.md  README.md  initial-spec.md
backend/: .dockerignore  .env.example  Dockerfile  UV_GUIDE.md  config.py  main.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260102_0000_initial_schema.py  20260103_2253_d9cdd04d1bac_add_side_chat_node_types.py  20260103_2342_e08318967186_add_selected_text_to_nodes.py  20260115_1626_4b2a3449a89f_add_user_model_and_topic_user_id.py  20260115_2318_3521b5ebff58_add_selection_position_columns.py  20260115_2346_ec0bc99964a9_add_user_preferences_table.py  20260115_2355_ac0196b33def_add_model_selection_fields.py
backend/api/: auth.py
backend/api/routes/: __init__.py  auth.py  chat.py  nodes.py  sessions.py  topics.py  users.py
backend/models/: __init__.py  database.py  schemas.py
backend/services/: chat_service.py
docs/: CHANGELOG.md  DEPLOYMENT.md  IDEAS.md  agentic-architecture.md  ai-merge.md  initial-spec.md  prd-user-preferences.md
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/auth/: AuthGuard.tsx  LoginPage.tsx
frontend/src/components/chat/: BranchSwitcher.tsx  ChatInput.tsx  ChatMessage.tsx  ChatThread.tsx  CollapsedBranch.tsx  NotePanel.tsx  SideChatPanel.tsx
frontend/src/stores/: authStore.ts  chatStore.ts  settingsStore.ts
frontend/src/types/: models.ts
(+3 files in other folders)
